--- a/Lennyouse/.gitignore
+++ b/Lennyouse/.gitignore
@@ -358,3 +358,7 @@ MigrationBackup/
 .ionide/
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp
+
+*.suo
+*.sqlite
+VSWorkspaceState.Json
