--- a/Lennyouse/DataLayer/DataLayer.csproj
+++ b/Lennyouse/DataLayer/DataLayer.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Recodme.RD.Lennyouse.DataLayer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
