--- a/Lennyouse/DataLayer/DataLayer.csproj
+++ b/Lennyouse/DataLayer/DataLayer.csproj
@@ -9,4 +9,8 @@
     <Folder Include="UserInfo\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
