--- a/Lennyouse/DataAccessLayer/DataAccessLayer.csproj
+++ b/Lennyouse/DataAccessLayer/DataAccessLayer.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Recodme.RD.Lennyouse.DataAccessLayer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
