--- a/Lennyouse/ConsoleApp1/App.csproj
+++ b/Lennyouse/ConsoleApp1/App.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Recodme.RD.Lennyouse.App</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
