Fixed Course, Dish and Serving BOs, added course Controller and Model, organized namespaces

--- a/Lennyouse/WebApi/WebApi.csproj
+++ b/Lennyouse/WebApi/WebApi.csproj
@@ -16,4 +16,11 @@
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\UserInfoControllers\" />
+    <Folder Include="Controllers\RestaurantInfoControllers\" />
+    <Folder Include="Models\UserInfoModels\" />
+    <Folder Include="Models\RestaurantInfoModels\" />
+  </ItemGroup>
+
 </Project>
