--- a/Lennyouse/WebApi/appsettings.json
+++ b/Lennyouse/WebApi/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SwaggerOptions": {
+    "JsonRoute": "swagger/{documentName}/swagger.json",
+    "ApiDescription": "Api para a aplicação Lennyouse",
+    "UiEndpoint": "v1/swagger.json"
+  }
 }
