Added AccountController, RestaurantInfoViewModels, RestaurantInfoControllers

--- a/Lennyouse/WebApi/appsettings.json
+++ b/Lennyouse/WebApi/appsettings.json
@@ -11,5 +11,10 @@
     "JsonRoute": "swagger/{documentName}/swagger.json",
     "ApiDescription": "Api para a aplicação Lennyouse",
     "UiEndpoint": "v1/swagger.json"
+  },
+  "Jwt": {
+    "Key": "oquequiserem1234",
+    "Issuer": "test.com",
+    "Audience":  "test.com"
   }
 }
