--- a/Lennyouse/WebApi/WebApi.csproj
+++ b/Lennyouse/WebApi/WebApi.csproj
@@ -19,4 +19,11 @@
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Base\" />
+    <Folder Include="Controllers\RestaurantControllers\Web\MenuInfoControllers\" />
+    <Folder Include="Controllers\RestaurantControllers\Web\UserInfoControllers\" />
+    <Folder Include="Controllers\RestaurantControllers\Web\RestaurantInfoControllers\" />
+  </ItemGroup>
+
 </Project>
