--- a/Lennyouse/WebApi/WebApi.csproj
+++ b/Lennyouse/WebApi/WebApi.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
     <PackageReference Include="Microsoft.Exchange.WebServices" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
@@ -21,9 +22,20 @@
 
   <ItemGroup>
     <Folder Include="Controllers\Base\" />
-    <Folder Include="Controllers\RestaurantControllers\Web\MenuInfoControllers\" />
     <Folder Include="Controllers\RestaurantControllers\Web\UserInfoControllers\" />
     <Folder Include="Controllers\RestaurantControllers\Web\RestaurantInfoControllers\" />
+    <Folder Include="Views\MenuInfoViews\DietaryRestrictions\" />
+    <Folder Include="Views\MenuInfoViews\Dishes\" />
+    <Folder Include="Views\MenuInfoViews\Meals\" />
+    <Folder Include="Views\MenuInfoViews\Menus\" />
+    <Folder Include="Views\MenuInfoViews\Servings\" />
+    <Folder Include="Views\RestaurantInfoViews\Bookings\" />
+    <Folder Include="Views\RestaurantInfoViews\Titles\" />
+    <Folder Include="Views\RestaurantInfoViews\StaffTitles\" />
+    <Folder Include="Views\RestaurantInfoViews\Restaurants\" />
+    <Folder Include="Views\UserInfoViews\ClientRecords\" />
+    <Folder Include="Views\UserInfoViews\StaffRecords\" />
+    <Folder Include="Views\UserInfoViews\People\" />
   </ItemGroup>
 
 </Project>
